Fix alignment

--- a/src/app/components/aluno/aluno-treino/aluno-treino-exercicio/aluno-treino-exercicio-dialog-form/aluno-treino-exercicio-dialog-form.component.css
+++ b/src/app/components/aluno/aluno-treino/aluno-treino-exercicio/aluno-treino-exercicio-dialog-form/aluno-treino-exercicio-dialog-form.component.css
@@ -2,6 +2,9 @@
     display: flex;
     overflow-y: hidden;
 }
+.container-title {
+    text-align: center;
+}
 .container-list {
     width: 36%;
     height: 100%;
